@@ -1,10 +1,10 @@
-# Automatically generated by php-weathermap v0.97dev
+# Automatically generated by php-weathermap v0.97c
 
 FONTDEFINE 100 docs/example/Vera.ttf 10
 
 BACKGROUND images/bw_gradient_1024.png
-WIDTH 950
-HEIGHT 625
+WIDTH 1024
+HEIGHT 768
 HTMLSTYLE overlib
 KEYFONT 100
 TITLE test
@@ -17,15 +17,15 @@ KEYBGCOLOR 255 255 255
 BGCOLOR 255 255 255
 TITLECOLOR 0 0 0
 TIMECOLOR 0 0 0
-SCALE DEFAULT 0 0   192 192 192  
-SCALE DEFAULT 0 1   255 255 255  
-SCALE DEFAULT 1 10   140 0 255  
-SCALE DEFAULT 10 25   32 32 255  
-SCALE DEFAULT 25 40   0 192 255  
-SCALE DEFAULT 40 55   0 240 0  
-SCALE DEFAULT 55 70   240 240 0  
-SCALE DEFAULT 70 85   255 192 0  
-SCALE DEFAULT 85 100   255 0 0  
+SCALE DEFAULT 0    0    192 192 192  
+SCALE DEFAULT 0    1    255 255 255  
+SCALE DEFAULT 1    10   140   0 255  
+SCALE DEFAULT 10   25    32  32 255  
+SCALE DEFAULT 25   40     0 192 255  
+SCALE DEFAULT 40   55     0 240   0  
+SCALE DEFAULT 55   70   240 240   0  
+SCALE DEFAULT 70   85   255 192   0  
+SCALE DEFAULT 85   100  255   0   0  
 
 SET nowarn_clipping 1
 
@@ -50,25 +50,33 @@ LINK DEFAULT
 # regular NODEs:
 NODE node1
 	LABEL Node 1
-	POSITION 649 242
+	ICON 128 128 images/hollow32.png
+	POSITION 800 250
 
 NODE node2
 	LABEL Node 2
-	POSITION 360 240
+	ICON 128 128 images/hollow32.png
+	POSITION 150 500
 
 NODE node3
 	LABEL Node 3
+	ICON 128 128 images/hollow32.png
 	POSITION 502 69
 
 
 # regular LINKs:
 LINK node1-node2
+	VIASTYLE angled
 	TARGET static:10M:20M
 	NODES node1 node2
+	VIA 150 250
+	SET _tidied 1
+
 
 LINK node2-node3
-	NODES node2 node3
+	NODES node2:44:-64 node3:-44:64
 	BANDWIDTH 2M
+	SET _tidied 1
 
 
 
