@@ -8,7 +8,7 @@ require_once 'lib/WMVector.class.php';
 require_once 'lib/WMLine.class.php';
 
 // so that you can't have the editor active, and not know about it.
-$ENABLED=false;
+$ENABLED=true;
 
 if(! $ENABLED)
 {
