@@ -9,6 +9,7 @@ repeat "error reports" in the forums.
     FIXED - KILO was ignored when processing %k in special tokens
     FIXED - Various fixes for PHP deprecated or strict-mode warnings
     FIXED - Line-ending trimming in 'external script' data source
+    FIXED - rounding error 'kinks' in angled VIA links
     FIXED - Config file path validation issue in editor (CVE-2013-3739)
     FIXED - Cloning a templated node in editor retains the template in the clone
     FIXED - cacti_use_ifspeed incorrect when interfaces > 20M and ifhighspeed available
